# mosquitto_plugins

./: .gitignore
hello-plugin/: CMakeLists.txt  hello.c
jwt-plugin/: CMakeLists.txt  README.md  jwt_auth.c
log-plugin/: CMakeLists.txt  log.c
